## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

roadster_includedir = $(pkgincludedir)

roadster_include_DATA = \
	gotowindow.h\
	databasewindow.h\
	datasetwindow.h\
	db.h\
	geometryset.h\
	gpsclient.h\
	gui.h\
	import.h\
	import_tiger.h\
	importwindow.h\
	layers.h\
	locationset.h\
	mainwindow.h\
	map.h\
	scenemanager.h\
	search.h\
	search_location.h\
	search_road.h\
	searchwindow.h\
	util.h\
	welcomewindow.h

EXTRA_DIST = $(roadster_include_DATA)
